# fenixwbbot

./: .gitignore  bot.py  bot_main.py  config.py  mongo_client.py  pyproject.toml  request.py
bot/: __main__.py  config.py
bot/database/: main.py
bot/handlers/: main.py
bot/handlers/messages/: start.py
bot/handlers/user/: start.py
bot/handlers/user/start/: __init__.py  start.py  states.py  vendor_code.py  vendor_code_plus_keyword.py
bot/keyboards/: inline.py
bot/middlewares/: __init__.py  chat_actions.py  db.py  main.py
bot/utils/: dbconnect.py
